syntax = "proto3";

import "google/protobuf/timestamp.proto";


option java_multiple_files = true;
option java_package = "org.mccproxy.service";
option java_outer_classname = "MCCProxyServiceProto";

package mccproxy;

service MCCProxyService {
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Invalidate(InvalidateRequest) returns (InvalidateResponse) {}
}

message ReadRequest {
  repeated string keys = 1;
}

message ReadResponse {
  repeated Item items = 1;
}

message Item {
  string key = 1;
  string value = 2;
}

message InvalidateRequest {
  repeated string keys = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message InvalidateResponse {
  bool success = 1;
}